# RedRHI

./: .gitmodules  CMakeLists.txt  main.cpp
Assets/6Hz/: 6Hz.mtl
Assets/shader/: mesh_test.frag  mesh_test.vert
RedRHI/: RedRHI.h  RedRHIBuffer.h  RedRHIDevice.h  RedRHIPipeline.h  RedRHIResourcePool.h  RedRHIShader.h  RedRHIUtility.h
RedRHI/OpenGL/: RedOpenGL.h  RedOpenGLBuffer.h  RedOpenGLDevice.cpp  RedOpenGLDevice.h  RedOpenGLPipeline.h  RedOpenGLShader.h
RedRHI/OpenGL/glad/: glad.c  glad.h
